--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="gog.css"/>
 <script src="jquery-1.7.2.min.js"></script>
 <script src="d3.v2.min.js"></script>
+<script src="underscore-min.js"></script>
 <script src="gog.js"></script>
 </title>
 <body>
