Initial implementation of line element.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 <h1>The Grammar of Graphics</h1>
 
-<div id="g1"></div>
+<div id="example1"></div>
+<div id="example2"></div>
+<div id="example3"></div>
 
 </body>
 </html>
