--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>The Grammar of Graphics</title>
 <link rel="stylesheet" type="text/css" href="gog.css"/>
+<script src="json2.js"></script>
 <script src="jquery-1.7.2.min.js"></script>
 <script src="d3.v2.min.js"></script>
 <script src="underscore-min.js"></script>
