--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="jquery-1.7.2.min.js"></script>
 <script src="d3.v2.min.js"></script>
 <script src="underscore-min.js"></script>
-<script src="gog.js"></script>
+<script src="gg.js"></script>
 <script src="examples.js"></script>
 </title>
 <body>
