--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>The Grammar of Graphics</title>
-<link rel="stylesheet" type="text/css" href="gog.css"/>
+<link rel="stylesheet" type="text/css" href="gg.css"/>
 <script src="json2.js"></script>
 <script src="jquery-1.7.2.min.js"></script>
 <script src="d3.v2.min.js"></script>
