Link directly to graphic definitions.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 <h1>The Grammar of Graphics</h1>
 
-<p><a href="https://github.etsycorp.com/pseibel/gog/blob/gh-pages/examples.js">See
+<p><a href="https://github.etsycorp.com/pseibel/gog/blob/gh-pages/examples.js#L75">See
 code for these graphics.</a></p>
 
 <div id='examples'></div>
