--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <script src="d3.v2.min.js"></script>
 <script src="underscore-min.js"></script>
 <script src="gg.js"></script>
+<script src="data.js"></script>
 <script src="examples.js"></script>
 </title>
 <body>
