--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 <body>
 <h1>The Grammar of Graphics</h1>
 
-<p><a href="https://github.etsycorp.com/pseibel/gog/blob/gh-pages/examples.js#L1" target="_blank">See
-code for these graphics.</a></p>
+<p><a href="examples.js" target="_blank">See code for these graphics.</a></p>
 
 <div id='examples'></div>
 
