--- a/codestats.html
+++ b/codestats.html
@@ -17,7 +17,10 @@ $(document).ready(function() {
             { geometry: 'line', mapping: { x: 'utc', y: 'lines' } },
             { geometry: 'point', mapping: { x: 'utc', y: 'lines', color: 'author' }, size: 3 }
         ],
-        scales: [ { type: 'color', aesthetic: 'color' } ],
+        scales: [
+            { type: 'color', aesthetic: 'color' },
+            { type: 'time', aesthetic: 'x' }
+        ],
     });
     chart.render(1000, 300, d3.select('#chart'), codestats)
 });
