--- a/codestats.html
+++ b/codestats.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>gg codestats</title>
 <link rel="stylesheet" type="text/css" href="gg.css"/>
+<link rel="stylesheet" type="text/css" href="codestats.css"/>
 <script src="json2.js"></script>
 <script src="jquery-1.7.2.min.js"></script>
 <script src="d3.v2.min.js"></script>
@@ -15,7 +16,8 @@ $(document).ready(function() {
     var chart = gg({
         layers: [
             { geometry: 'line', mapping: { x: 'utc', y: 'lines' } },
-            { geometry: 'point', mapping: { x: 'utc', y: 'lines', color: 'author' }, size: 3 }
+            { geometry: 'point', mapping: { x: 'utc', y: 'lines', color: 'author' }, size: 3 },
+            { geometry: 'text', mapping: { x: 'utc', y: 'lines', text: '{author}' },  show: "hover" }
         ],
         scales: [
             { type: 'time', aesthetic: 'x', legend: 'Day' },
