--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <script src="gg.js"></script>
 <script src="data.js"></script>
 <script src="examples.js"></script>
+</head>
 <body>
 <h1>The Grammar of Graphics</h1>
 
