--- a/codestats.html
+++ b/codestats.html
@@ -5,17 +5,18 @@
 <title>gg codestats</title>
 <link rel="stylesheet" type="text/css" href="gg.css"/>
 <link rel="stylesheet" type="text/css" href="codestats.css"/>
-<script src="json2.js"></script>
-<script src="jquery-1.7.2.min.js"></script>
 <script src="d3.v2.min.js"></script>
 <script src="underscore-min.js"></script>
 <script src="gg.js"></script>
 <script src="codestats.js"></script>
+</title>
+<body>
+<h1>Lines of code in gg over time.</h1>
+<div id='chart'></div>
 <script>
-$(document).ready(function() {
     var chart = gg({
         layers: [
-            { geometry: 'line', mapping: { x: 'utc', y: 'lines' } },
+            { geometry: 'line', mapping: { x: 'utc', y: 'lines' }, smooth: false },
             { geometry: 'point', mapping: { x: 'utc', y: 'lines', color: 'author' }, size: 3 },
             { geometry: 'text', mapping: { x: 'utc', y: 'lines', text: '{author}' },  show: "hover" }
         ],
@@ -26,11 +27,6 @@ $(document).ready(function() {
         ],
     });
     chart.render(1000, 600, d3.select('#chart'), codestats)
-});
 </script>
-</title>
-<body>
-<h1>Lines of code in gg over time.</h1>
-<div id='chart'></div>
 </body>
 </html>
