--- a/codestats.html
+++ b/codestats.html
@@ -18,7 +18,7 @@
         layers: [
             { geometry: 'line', mapping: { x: 'utc', y: 'lines' }, smooth: false },
             { geometry: 'point', mapping: { x: 'utc', y: 'lines', color: 'author' }, size: 3 },
-            { geometry: 'text', mapping: { x: 'utc', y: 'lines', text: '{author}' },  show: "hover" }
+            { geometry: 'text', mapping: { x: 'utc', y: 'lines' }, text: '{author}',  show: "hover" }
         ],
         scales: [
             { type: 'time', aesthetic: 'x', legend: 'Day' },
